# woprok_discord_bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bot.bat  bot_update.bat
external_libs/: lib_list.md
resources/: config.json.example  res_list.md
src/: main.rs
src/bot/: bot_main.rs  bot_message_handlers.rs  bot_personality.rs  bot_token_provider.rs  example_bot_1.rs  example_bot_1_1.rs  mod.rs
src/bot_commands/: math.rs  meta.rs  owner.rs
src/other/: environment_methods.rs  guess_game.rs  mod.rs
src/src_bot/: mod.rs
src/src_bot/bot/bot_commands/: about.rs  admin.rs  bot_message_handlers.rs  calendar.rs  dice.rs  emoji.rs  game.rs  math.rs  meta.rs  normal.rs  owner.rs  voice.rs
src/src_bot/bot/bot_core/: bot_framework.rs  bot_main.rs
src/src_bot/bot/bot_utils/: bot_helpers.rs
src/src_other/: environment_methods.rs  guess_game.rs  mod.rs
