[package]
name = "woprok_discord_bot"
version = "1.0.0"
authors = ["Miroslav Valach <skvalach@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
rand = "0.7"
kankyo = "0.3"
env_logger = "0.6"
log = "0.4"
hey_listen = "0.4.0"
white_rabbit = "0.1.1"